--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <button onclick="measurePower()">ИЗМЕРИТЬ</button>
     </div>
 
-    <audio id="powerSound" src="power_up.mp3" preload="auto"></audio>
+    <audio id="powerSound" src="odinochnyiy-krik-svini.mp3" preload="auto"></audio>
 
     <script>
         function measurePower() {
